--- a/resource/css/index.css
+++ b/resource/css/index.css
@@ -36,6 +36,7 @@ header.mo{
   z-index: 9999;
   display: none;
 }
+side.mo{display: none;}
 .header__wrap{
   height: 80px;
   justify-content: flex-start;
@@ -257,7 +258,8 @@ header.mo .header__wrap img{
     font-family: 'SpoqaHanSansNeo-Bold', sans-serif;
   }
 
-  .side{
+  .side.mo{
+    display: block;
     width: 100vw;
     height: 100vh;
     position: fixed;
@@ -267,7 +269,7 @@ header.mo .header__wrap img{
     opacity: 0;
     visibility: hidden;
   }
-  .side.on{opacity: 1; visibility: unset;}
+  .side.mo.on{opacity: 1; visibility: unset;}
   .side .side__bg{
     width: 100%;
     height: 100%;
