--- a/resource/css/index.css
+++ b/resource/css/index.css
@@ -108,6 +108,7 @@ header.mo .header__wrap img{
   height: 100%;
   display: flex;
   align-items: flex-end;
+  margin-top: 120px;
 }
 .section__01 .container__right img{
   width: 100%;
@@ -162,12 +163,24 @@ header.mo .header__wrap img{
   justify-content: space-between;
   align-items: center;
 }
-.container__video iframe{
+.container__video .video__box{
   flex: 1;
-  height: 320px;
+  position: relative;
+  padding-bottom: 27.5%;
+  height: 0;
+  overflow: hidden;
 }
-.container__video iframe + iframe{
+.container__video .video__box + .video__box{
   margin-left: 28px;
+}
+.container__video iframe,
+.container__video object,
+.container__video embed{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .section__05{
   padding: 120px 0;
@@ -196,7 +209,6 @@ header.mo .header__wrap img{
 .logo__container .logo__item p{
   font-size: 18px;
   text-align: center;
-  font-family: 'SpoqaHanSansNeo-Medium', sans-serif;
 }
 .section__06{
   padding: 120px 0;
@@ -353,6 +365,7 @@ header.mo .header__wrap img{
     display: flex;
     align-items: center;
     justify-content: center;
+    margin-top: 0;
   }
   .section__01 .container__right img{
     width: auto;
@@ -428,14 +441,29 @@ header.mo .header__wrap img{
     flex-direction: column;
     padding: 0 16px;
   }
-  .container__video iframe{
+  .container__video .video__box{
     flex: unset;
     width: 100%;
-    height: 183px;
+    position: relative;
+    padding-bottom: 56.25%;
+    height: 0;
+    overflow: hidden;
   }
-  .container__video iframe + iframe{
+  .container__video .video__box + .video__box{
+    margin-left: 28px;
+  }
+  .container__video .video__box + .video__box{
     margin-left: 0;
     margin-top: 16.5px;
+  }
+  .container__video iframe,
+  .container__video object,
+  .container__video embed{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 
   .section__05 {
